--- a/student/templates/AdminCourseAdd.html
+++ b/student/templates/AdminCourseAdd.html
@@ -16,7 +16,7 @@
         <div class="layui-row">
 
             <div class="layui-col-md9">
-                <form action="/AdminCourseAddStudent/" method="post" class="layui-form layui-form-pane" />
+                <form action="/AdminAddCourse/" method="post" class="layui-form layui-form-pane" />
                 {% csrf_token %}
                     <hr class="layui-bg-green">
 
