--- a/student/templates/login.html
+++ b/student/templates/login.html
@@ -45,7 +45,7 @@
             <hr class="hr20">
         </form>
     </div>
-<script src="../static/lib/layui/layui.js" charset="utf-8"></script>
+<!--<script src="../static/lib/layui/layui.js" charset="utf-8"></script>-->
     <script>
         $(function  () {
         layui.use('form', function(){
