--- a/student/templates/AdminStudent.html
+++ b/student/templates/AdminStudent.html
@@ -1,10 +1,63 @@
-<!DOCTYPE html>
+{% load static %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>课程管理</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/layui.css' %}"/>
 </head>
 <body>
-管理员 学生管理
+<!--管理员 课程管理-->
+{% block content %}
+    <div class="layui-container">
+        <blockquote class="layui-elem-quote">
+            <h1>CRUD——Django + LayUI</h1>
+        </blockquote>
+        {# 显示所有学生模块 #}
+        <table class="layui-table">
+      <colgroup>
+        <col width="150">
+        <col width="200">
+        <col>
+      </colgroup>
+      <thead>
+        <tr>
+            <th>学号</th>
+            <th>姓名</th>
+            <th>性别</th>
+            <th>年龄</th>
+            <th>学院</th>
+            <th>专业</th>
+            <th>是否毕业</th>
+            <th>修改</th>
+        </tr>
+      </thead>
+      <tbody>
+        {%for student in data%}
+            <tr>
+                <td>{{student.StuNum}}</td>
+                <td>{{student.StuName}}</td>
+                <td>{{student.StuSex}}</td>
+                <td>{{student.StuAge}}</td>
+                <td>{{student.StuCollege}}</td>
+                <td>{{student.StuMajor}}</td>
+                <td>{{student.StuGra}}</td>
+                <td>
+                    {# 修改学生模块 #}
+                    <a href="/search_student/{{ student.StuNum }}" class="layui-btn layui-btn-danger">
+                        <i class="layui-icon">&#xe640;</i>修改
+                    </a>
+                </td>
+            </tr>
+        {%endfor%}
+      </tbody>
+        </table>
+
+        {# 添加学生模块 #}
+        <a href="/AdminStudentAdd" class="layui-btn layui-btn-warm">
+            <i class="layui-icon">&#xe654;</i> 添加
+        </a>
+    </div>
+{% endblock %}
 </body>
 </html>
