--- a/student/templates/teacher/Courseadd_result.html
+++ b/student/templates/teacher/Courseadd_result.html
@@ -68,7 +68,7 @@
           <ul class="nav nav-sidebar">
             <li class="active"><a href="#">课程信息管理 <span class="sr-only">(current)</span></a></li>
             <li><a href="{% url 'teacher:addcourse' teainfo.TeaNum%}">上传新课程</a></li>
-            <li><a href="">管理已有课程</a></li>
+            <li><a href="{% url 'teacher:lookcourse' teainfo.TeaNum%}">管理已有课程</a></li>
             <li><a href="">录入课程成绩</a></li>
           </ul>
         </div>
