--- a/student/templates/teacher/Tea_lookcourse.html
+++ b/student/templates/teacher/Tea_lookcourse.html
@@ -68,7 +68,7 @@
           <ul class="nav nav-sidebar">
             <li class="active"><a href="#">课程信息管理 <span class="sr-only">(current)</span></a></li>
             <li><a href="{% url 'teacher:addcourse' teainfo.TeaNum%}">上传新课程</a></li>
-            <li><a href="">管理已有课程</a></li>
+            <li><a href="{% url 'teacher:lookcourse' teainfo.TeaNum%}">管理已有课程</a></li>
             <li><a href="">录入课程成绩</a></li>
           </ul>
         </div>
@@ -120,7 +120,7 @@
                               修改 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu">
-                              <li><a href="#">修改</a></li>
+                              <li><a href="{% url 'teacher:altercourse' course.id%}">修改</a></li>
                               <li role="separator" class="divider"></li>
                               <li><a href="#">删除</a></li>
                             </ul>
