--- a/student/templates/teacher/Courseadd_result.html
+++ b/student/templates/teacher/Courseadd_result.html
@@ -87,7 +87,7 @@
                         <td>{{teainfo.TeaNum}}</td>
                     </tr>
                 </tbody>
-                <form>
+                <form action="">
                 {% csrf_token %}
                     <div class="form-group">
                         <lable for="TeaName">课程名称</lable>
