--- a/student/templates/teacher/update_self.html
+++ b/student/templates/teacher/update_self.html
@@ -69,7 +69,7 @@
             <li class="active"><a href="#">课程信息管理 <span class="sr-only">(current)</span></a></li>
             <li><a href="{% url 'teacher:addcourse' teainfo.TeaNum %}">上传新课程</a></li>
             <li><a href="{% url 'teacher:lookcourse' teainfo.TeaNum%}">管理已有课程</a></li>
-            <li><a href="">录入课程成绩</a></li>
+            <li><a href="{% url 'teacher:addcoursegradechoose' teainfo.TeaNum%}">录入课程成绩</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
